# Aether

./: .gitignore  AETHER_UADD_DRIFT_REPORT.md  BUGS.md  CLAUDE.md  DELTA_RESULTS.md  PHASE1_RESULTS.md  PYTHON_RESULTS.md  PYTHON_VIABILITY.md  README.md  REALWORLD_CVE_HIGHVALUE.md  REALWORLD_HUMANIZE.md  REALWORLD_SECURITY_PACKAGING.md  REALWORLD_TIER2.md  RW_MINING.md  SECURITY_POSTURE.md  SPEC_ISSUES.md  handoff.md  pyproject.toml  start_playground.bat
bench/: AETHERBENCH.md  CONTRACT_TASKS.md  EVIDENCE.md  REALWORLD_VALIDATION.md  SCAN_FINDINGS.md  evidence_run.py
demo/: injected_agent.py  legit_agent.py  run_demo.sh  starter.caps.toml
docs/: SCANNING.md  aether_facebook_analysis.md  competitive-analysis.md  competitive.md  opus_4_7_architecture.md  python-interop.md
grammar/: diagnostics.md  grammar.ebnf  stdlib.md  types.md
outreach/: CUSTOMER_EVIDENCE.md  README.md  evidence_run.py  log.md  targets.md
playground/: Dockerfile  SECURITY.md
prompt/: upstream-bug-report.md
scripts/: run_all.py
tests/: _tmp_broken_for_c6.aeth  ratchet_baseline.json  test_alsp_corpus.py  test_cause_b.py  test_deterministic.py  test_diagnostic_catalog.py  test_effect_scope.py  test_exhaustiveness.py  test_false_positive_corpus.py  test_fix_loop_cli.py  test_fix_loop_demo.py  test_fmt.py  test_llm_fix_demo.py  test_lsp.py  test_mining.py  test_module_validation.py  test_multi_file.py  test_pack.py  test_packaging.py  test_parser_recovery.py  test_phase1.py  test_playground.py  test_pretty_roundtrip.py  test_py_soundness.py  test_ratchet.py  test_regressions.py  test_release_emit.py  test_runtime_enforcement.py  test_scan.py  test_sdk.py  test_smt.py  test_static_effects.py  test_stdlib_bytes.py  test_stdlib_d1.py
tools/: admission.py  aether_pr_check.py  alsp_dashboard.html  alsp_http.py  alsp_surface.py  breakeven.py  cap_delta.py  delta_eval.py  delta_eval_results.json  diff_ingest.py  diff_shape.py  py_frontend.py  py_surface.py  (+6 more)
(+845 files in other folders)
